--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,11 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^2.1.0",
     "auth0-js": "^9.6.1",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.3",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
